@@ -15,6 +15,7 @@
 - fixed bug in guests (goffy)
 - removed redundant params from Request (goffy)
 - replaced Common/XoopsConfirm by Common/Confirm(mamba/goffy)
+- table renaming in fieldelements (goffy)
 
 <h5>3.5.1 Beta 1   [NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.25, PHP 8.0.12, PHP 8.1.0 Beta 4
  - semantic versioning (mamba)
